--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,25 +1,34 @@
 FROM python:3.11-slim
 
+# 環境変数設定
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+# 必要なパッケージのインストール
+RUN apt-get update && apt-get install -y \
+    curl unzip gnupg2 wget \
+    chromium-driver \
+    chromium \
+    fonts-ipafont-gothic \
+    --no-install-recommends && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Selenium が Chromium を使うように設定
+ENV CHROME_BIN=/usr/bin/chromium
+
+# 作業ディレクトリ作成
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    libxml2-dev \
-    libxslt1-dev \
-    libcurl4-openssl-dev \
-    libssl-dev \
-    libffi-dev \
-    locales \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN sed -i '/ja_JP.EUC-JP/s/^# //g' /etc/locale.gen && \
-    locale-gen && \
-    update-locale LANG=ja_JP.EUC-JP
-
+# requirements.txt をコピーしてインストール
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# アプリケーションコードをコピー
+COPY app/ .
 
+# ポート解放
+EXPOSE 5001
+
+# Flaskアプリ起動
 CMD ["python", "main.py"]
+CMD ["sh", "-c", "echo Starting Flask && python main.py"]
