--- a/compose.yml
+++ b/compose.yml
@@ -6,5 +6,9 @@ services:
     container_name: river_scraper
     working_dir: /app
     volumes:
-      - .:/app
-    command: ['python', 'main.py']
+      - ./app:/app
+    ports:
+      - '5001:5001'
+    environment:
+      - PYTHONUNBUFFERED=1
+    restart: unless-stopped
