自動スクレイピング

--- a/compose.yml
+++ b/compose.yml
@@ -9,6 +9,8 @@ services:
       - ./app:/app
     ports:
       - '5001:5001'
+    env_file:
+      - .env
     environment:
       - PYTHONUNBUFFERED=1
     restart: unless-stopped
