--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ FLASK_PORT=5001
 SCRAPE_URL=https://www1.river.go.jp/cgi-bin/DspWaterData.exe?KIND=9&ID=304031284403020
 CHROME_DRIVER_PATH=/usr/local/bin/chromedriver
 SCRAPE_INTERVAL_SECONDS=600
+CORS_ALLOWED_ORIGINS=http://localhost:3000
